安装axios mint-ui qs swiper velocity-animate库

--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "mint-ui": "^2.2.13",
+    "qs": "^6.6.0",
+    "swiper": "^4.4.2",
+    "velocity-animate": "^1.5.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
